# Protocol

./: .gitignore  CMakeLists.txt  README.md  esp_example.ino  example.ino  protocol.md  start_profiling.sh
include/: nucleo_protocol.hpp  protocol_utils.hpp  serial.hpp
src/: main.cpp  nucleo_protocol.cpp  nucleo_protocol.hpp  protocol_utils.cpp  serial.cpp  serial.hpp
test/: test.cpp
